--- a/style.css
+++ b/style.css
@@ -1,5 +1,81 @@
-h1 {
-  font-family: "Lucida Sans";
-  color: #990099;
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
 }
-p {font-family: "Lucida Sans"; color: black;}
+.header{
+    min-height:100vh;
+    width: 100%;
+    background: #000;
+    color: #fff;
+    position: relative;
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    z-index: 1;
+}
+.logo{
+    text-decoration: none;
+    color: #fff;
+    font-size: 30px;
+    font-weight: bold;
+    padding-top: 10px;
+    padding-left: 10%;
+
+}
+.nav-links{
+    text-align: right;
+    background: #ff1616;
+    padding: 10px 30px;
+    border-bottom-left-radius: 18px;
+    font-family: 'Inconsolata';
+}
+.nav-links ul li{
+    list-style: none;
+    display: inline-block;
+    padding: 10px 25px;
+    font-family: 'Inconsolata', monospace;
+
+
+}
+.nav-links ul li a{
+    color: #fff;
+    text-decoration: none;
+    font-size: 18px;
+}
+.left-sidebar{
+    width: 20%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: #f88d8d;
+}
+.row{
+    padding: 0 10%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    position: relative;
+    margin-top: 5%;
+}
+.left-col{
+    flex-basis: 40%;
+
+}
+.right-col{
+    flex-basis: 55%;
+}
+.right-col h1{
+    font-family: 'Bebas Neue', cursive;
+    font-size: 55px;
+    font-weight:600;
+}
+.right-col p{
+    font-family: 'Comfortaa', cursive;
+    color: #fff;
+    margin: 200px 0 70 px;
+}
